# Pipelines

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
chimerapy/pipelines/: __init__.py  kinect_node.py  utils.py  yolo_node.py
chimerapy/pipelines/embodied/: gaze.py  log_processor.py
chimerapy/pipelines/g3/: node.py
chimerapy/pipelines/generic_nodes/: audio_node.py  log_reader.py  screen_capture.py  video_nodes.py
chimerapy/pipelines/generic_nodes/audio_backends/: __init__.py  abc.py  pvrecorder.py  pyaudio.py
chimerapy/pipelines/huggin_face/: README.md  data_vqa.py  hf_cv_node.py  hf_display.py  hf_node.py  hf_save.py  hf_text.py  hf_text_node.py  hf_video.py  hf_vqa.py
chimerapy/pipelines/mf_sort_tracking/: anonymizer.py  bbox_painter.py  detector.py  tracker.py  video.py
chimerapy/pipelines/pose/: data.py  multi_save.py  multi_vid_pose.py
chimerapy/pipelines/speech_to_text/: deepgram_node.py
chimerapy/pipelines/yolov8/: README.md  data.py  display.py  multi_save.py  multi_vid_pose.py  video.py
configs/: README.md  all_local.json
configs/MF_SORT/: all_local.json
configs/YOLO/: all_local.json  remote_show_only.json
configs/audio/: local_audio_pvrecorder.json  local_audio_record.json
configs/displays/: all_local.json  all_local_http.json  all_local_loop.json  all_local_save.json  camera_test.json  screen_capture.json
configs/embodied/: all_local.json  gaze_processing.json  logs_processing.json
configs/g3/: all_local_single_device.json
configs/huggingface/: cvModel.json  test.txt  textModel.json  vqaModel.json
configs/mf_sort/: all_local.json  all_local_anon.json  remote_trackers.json  single_tracker_local.json  single_tracker_local_http.json  single_tracker_local_webcam.json  single_tracker_local_with_anon.json  yolo_only_local.json
configs/mf_sort/ssmv/: single_tracker_local.json  single_tracker_local_hidden_heads.json  single_tracker_local_hidden_heads_threshold_distance.json
configs/pose/: cvModel.json  multi_pose_demo.json  testing.json  textModel.json
configs/speech_to_text/: stt_deepgram.json
configs/yolo/: all_local.json  remote_show_only.json
mmlapipe/: __init__.py  kinect_node.py  pose_node.py  save_node.py  show_node.py  utils.py  video_node.py  yolo_node.py
mmlapipe/embodied/: gaze.py  log_processor.py
mmlapipe/generic_nodes/: audio_node.py  log_reader.py  screen_capture.py  video_nodes.py
mmlapipe/mf_sort/: __init__.py  bbox_painter.py  data.py  detector.py  identifiable_video.py  mf_sort_video.py  threaded_bbox_painter.py  tracker.py
mmlapipe/mf_sort_tracking/: anonymizer.py  bbox_painter.py  data.py  detector.py  tracker.py  video.py
mmlapipe/pose/: README.md  data.py  display.py  how_to_config.md  multi_pose_demo.json  multi_save.py  multi_vid_pose.py  pose_node.py  save_node.py  video.py
test/: conftest.py  test_log_reader.py  test_plugin.py  test_yolo.py
